User List and View Loaded from Spring Boot

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,2 @@
 handle avatar in user-update
-instituteId - move into encrypted token, will be extracted by backend
+<div *ngIf="user; else loadingOrError" class="row"> add global spinner
