Basic Structure and CRUD completed (Angular + Spring Boot)

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
 handle avatar in user-update
 <div *ngIf="user; else loadingOrError" class="row"> add global spinner
 hide delete button for self in list
+faculty,dept,program view page
+course-from teacher preselect
